# tensorrt

./: .gitattributes  CMakeLists.txt  data
samples/: Makefile  Makefile.config
targets/x86_64-linux-gnu/lib/: .gitattributes  libnvinfer.so.8  libnvinfer.so.8.4.3  libnvinfer.so.8.5.1  libnvinfer_builder_resource.so.8.4.3  libnvinfer_builder_resource.so.8.5.1  libnvinfer_plugin.so.8  libnvinfer_plugin.so.8.4.3  libnvonnxparser.so.8  libnvonnxparser.so.8.4.3  libnvonnxparser.so.8.5.1  libnvparsers.so.8.4.3  libnvparsers.so.8.5.1
